--- a/src/pages/showFurniture/ShowFurniture.css
+++ b/src/pages/showFurniture/ShowFurniture.css
@@ -3,9 +3,17 @@
 
 }
 
+
+
 .card:hover .card-body {
     right: 0;
-    bottom: 0;
+    bottom: 50px;
+    top: 60px;
     font-size: 20px;
-    /* transition: 0.5s ease-in-out; */
+    margin-top: 25px;
+    margin-right: 10px;
+    margin-left: 20px;
+    border-radius: 10px;
+    color: white;
+
 }
